feat: 프로젝트 조회, 삭제, 이동 api 완료