@@ -4,13 +4,16 @@ import com.illunex.emsaasrestapi.common.CustomException;
 import com.illunex.emsaasrestapi.common.CustomResponse;
 import com.illunex.emsaasrestapi.common.ErrorCode;
 import com.illunex.emsaasrestapi.common.code.EnumCode;
+import com.illunex.emsaasrestapi.member.dto.ResponseMemberDTO;
+import com.illunex.emsaasrestapi.partnership.dto.ResponsePartnershipDTO;
+import com.illunex.emsaasrestapi.partnership.mapper.PartnershipMemberMapper;
+import com.illunex.emsaasrestapi.partnership.vo.PartnershipMemberPreviewVO;
+import com.illunex.emsaasrestapi.partnership.vo.PartnershipMemberVO;
 import com.illunex.emsaasrestapi.project.document.Project;
-import com.illunex.emsaasrestapi.project.document.ProjectId;
 import com.illunex.emsaasrestapi.project.dto.RequestProjectDTO;
 import com.illunex.emsaasrestapi.project.dto.ResponseProjectDTO;
 import com.illunex.emsaasrestapi.project.mapper.ProjectCategoryMapper;
 import com.illunex.emsaasrestapi.project.mapper.ProjectMapper;
-import com.illunex.emsaasrestapi.project.mapper.ProjectMemberMapper;
 import com.illunex.emsaasrestapi.project.vo.ProjectCategoryVO;
 import com.illunex.emsaasrestapi.project.vo.ProjectVO;
 import com.mongodb.client.result.UpdateResult;
@@ -24,7 +27,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -43,7 +45,7 @@ import java.util.stream.IntStream;
 public class ProjectService {
     private final ProjectMapper projectMapper;
     private final ProjectCategoryMapper projectCategoryMapper;
-    private final ProjectMemberMapper projectMemberMapper;
+    private final PartnershipMemberMapper partnershipMemberMapper;
 
     private final MongoTemplate mongoTemplate;
     private final ModelMapper modelMapper;
@@ -300,7 +302,7 @@ public class ProjectService {
 
         List<ResponseProjectDTO.ProjectCategory> result = categoryList.stream()
                 .map(vo -> modelMapper.map(vo, ResponseProjectDTO.ProjectCategory.class))
-                .collect(Collectors.toList());
+                .toList();
 
         //카테고리별 프로젝트 개수 세팅
         for(ResponseProjectDTO.ProjectCategory res : result){
@@ -426,9 +428,6 @@ public class ProjectService {
      * @throws CustomException
      */
     public CustomResponse<?> moveProject(List<RequestProjectDTO.ProjectId> projectId) throws CustomException {
-
-
-
         for(RequestProjectDTO.ProjectId dto : projectId){
             //maraiDB
             ProjectVO projectVO = ProjectVO.builder()
@@ -442,6 +441,48 @@ public class ProjectService {
         return CustomResponse.builder()
                 .data(null)
                 .message("카테고리 이동 되었습니다.")
+                .build();
+    }
+
+
+
+    /**
+     * 카테고리별 프로젝트 단순 내용 조회
+     * @param projectId
+     * @return
+     * @throws CustomException
+     */
+    public CustomResponse<?> selectProject(RequestProjectDTO.ProjectId projectId) throws CustomException {
+
+        //TODO[pyj]: 파트너쉽 정보 필요
+        Integer partnershipIdx = 1;
+
+        // 프로젝트 조회
+        List<ProjectVO> projectList = projectMapper.selectByProjectCategoryIdx(projectId.getProjectCategoryIdx());
+
+        List<ResponseProjectDTO.ProjectPreview> result = projectList.stream()
+                .map(vo -> modelMapper.map(vo, ResponseProjectDTO.ProjectPreview.class))
+                .toList();
+
+        //구성원 조회
+        for(ResponseProjectDTO.ProjectPreview dto : result){
+            List<PartnershipMemberPreviewVO> memberList = partnershipMemberMapper.selectAllByProjectIdx(dto.getProjectIdx());
+            List<ResponsePartnershipDTO.MemberPreview> memberPreview = memberList.stream()
+                    .map(vo -> ResponsePartnershipDTO.MemberPreview.builder()
+                                            .memberIdx(vo.getIdx())
+                                            .name(vo.getName())
+                                            .profileImageUrl(vo.getProfileImageUrl())
+                                            .profileImagePath(vo.getProfileImagePath())
+                                            .build()
+                    )
+                    .toList();
+
+            dto.setMember(memberPreview);
+        }
+
+
+        return CustomResponse.builder()
+                .data(result)
                 .build();
     }
 }
